--- a/Practice.html
+++ b/Practice.html
@@ -9,6 +9,7 @@
         <p><strong>This is strong text</strong></p>
         <p><i>This is italzized text</i></p>
         <p>This is part of the paragraph</p>
+        <br />This sentence has been separated from the pervious text by the line break tag</p>
         <p>This is an example of <sup>superscript</sup></p>
         <p>This is an example of <sub>superscript</sub></p>
         <div id="ContentArea" style="color: red;">
