--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,11 +15,11 @@
     <p>Links to our pages will go here</p>
     <hr />
     <h2><em>About Me</h2></em>
-    <p>Paraprach 1 about me</p>
-    <p>Paragraph 2 with more stuff about me. </p>
+    <p>Hello, my name is Dillon Kiley. I was born in 1998 in Tobolsk, Russia. I was adopted at the age of 1 to an American family in Denver, Colorado.</p>
+    <p>I've lived in Denver ever since I came here in 1999. Then two years later my parents adopted another kid from Russia and named him Dane. Then 2 years after Dane's adoption, my parents adopted a little girl from China and named her Isabel.</p>
     <h2><em>Past Expirences</em></h2>
-    <p>Paragraph 1 descibing something I've accomplished</p>
-    <p>Paragraph 2 with another caccomplishment</p>
+    <p>I've been playing soccer since the age of 5. I grew up playing recreational thought the city's youth league. In middle school I decided to play club soccer for the Rapids Acadmeny. I worked my way up to the highest level though the years and got offered a few schollarships to play in college.  </p>
+    <p>Instead of playing in college, I decided to take an offer to play professional indoor soccer. </p>
     <h2><em>Hobbies</em>></h2>
     <p>Paragraph 1 describing my favorite hobby</p>
     <p>Paragraph 2 describing another hobby</p>
