--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,8 +21,8 @@
     <p>I've been playing soccer since the age of 5. I grew up playing recreational thought the city's youth league. In middle school I decided to play club soccer for the Rapids Acadmeny. I worked my way up to the highest level though the years and got offered a few schollarships to play in college.  </p>
     <p>Instead of playing in college, I decided to take an offer to play professional indoor soccer. </p>
     <h2><em>Hobbies</em>></h2>
-    <p>Paragraph 1 describing my favorite hobby</p>
-    <p>Paragraph 2 describing another hobby</p>
+    <p>My favorite hobby is soccer obusiouly... and guitar! I started my freshman year of highschool and have been playing for 6 years now. </p>
+    <p>Another hobbie I have is coding. I love playing with my Rasperry Pi and my Adruino which uses Python and Adruino's own programming language. </p>
     <hr />
     </body>
 </html>
