--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,7 +4,7 @@
     Date Created: 1/22/20
     Most recent revision: 1/22/20
 -->
-<html>
+<html lang="en">
     <head>
         <title>Dillon's Profolio</title>
     </head>
@@ -23,6 +23,9 @@
     <h2><em>Hobbies</em>></h2>
     <p>My favorite hobby is soccer obusiouly... and guitar! I started my freshman year of highschool and have been playing for 6 years now. </p>
     <p>Another hobbie I have is coding. I love playing with my Rasperry Pi and my Adruino which uses Python and Adruino's own programming language. </p>
-    <hr />
     </body>
+    <footer>
+        <hr />
+        <p>&copy; 2020 Dillon Kiley. All rights reserved.</p>
+    </footer>
 </html>
