--- a/Practice.html
+++ b/Practice.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>This is a heading</h1>
+        <p> In this paragraph, our <span style="background-color: yellow">span element</span> will
+            highlight the text it contains in yellow.</p>
+        <a>Clickable Content</a>
         <p><b>This is bold text</b></p>
         <p><strong>This is strong text</strong></p>
         <p><i>This is italzized text</i></p>
