--- a/Practice.html
+++ b/Practice.html
@@ -7,7 +7,12 @@
         <h1>This is a heading</h1>
         <p> In this paragraph, our <span style="background-color: yellow">span element</span> will
             highlight the text it contains in yellow.</p>
-        <a>Clickable Content</a>
+        <p>Clickable content</p>
+        <a href="https://www.google.com">Google</a>
+                <!--To use image as a link-->
+        <a href="https://www.google.com">
+            <img src="images/portrait.jpg" />
+          </a>
         <p><b>This is bold text</b></p>
         <p><strong>This is strong text</strong></p>
         <p><i>This is italzized text</i></p>
