CODE-Along: Using Inline Elements

--- a/Practice.html
+++ b/Practice.html
@@ -9,10 +9,34 @@
             highlight the text it contains in yellow.</p>
         <p>Clickable content</p>
         <a href="https://www.google.com">Google</a>
-                <!--To use image as a link-->
+                <hr />
+        <!--To use image as a link-->
         <a href="https://www.google.com">
             <img src="images/portrait.jpg" />
           </a>
+         <hr />
+         <!--This opens google in a new tab "_blank"-->
+          <a href="https://www.google.com" target="_blank">Google</a>
+        <!-- External Links-->
+        <a href="https://www.google.com" target="_blank">Google</a>
+        <!--Internal Links-->
+        <!-- about.html is a file within the folder of the website -->
+        <!-- <a href="about.html">About Us</a> -->
+        <!-- Another internal link not sure how it works yet-->
+        <a href="products/desktop-computer.html">Featured Product</a>
+        
+        <!--Bookmark within website -->
+        <!--
+          <h1>Bookmark Links in HTML</h1>
+
+        <p><a href="#target">This is the question.</a></p>
+
+        <figure><img src="https://cdn.pixabay.com/photo/2018/06/24/20/32/ivy-3495403_1280.jpg" alt="" /></figure>
+
+        <p id="target">This is the target.</p>
+        
+        <figure><img src="https://cdn.pixabay.com/photo/2018/06/18/06/43/nature-3481966_1280.jpg" alt="" /></figure>
+        -->
         <p><b>This is bold text</b></p>
         <p><strong>This is strong text</strong></p>
         <p><i>This is italzized text</i></p>
