--- a/Practice.html
+++ b/Practice.html
@@ -24,7 +24,7 @@
         <!-- <a href="about.html">About Us</a> -->
         <!-- Another internal link not sure how it works yet-->
         <a href="products/desktop-computer.html">Featured Product</a>
-        
+        <hr />
         <!--Bookmark within website -->
         <!--
           <h1>Bookmark Links in HTML</h1>
@@ -37,6 +37,7 @@
         
         <figure><img src="https://cdn.pixabay.com/photo/2018/06/18/06/43/nature-3481966_1280.jpg" alt="" /></figure>
         -->
+        <img src="https://cdn.pixabay.com/photo/2017/06/21/00/22/dog-2425528_960_720.jpg" alt="Photo of a puppy and a kitten." />
         <p><b>This is bold text</b></p>
         <p><strong>This is strong text</strong></p>
         <p><i>This is italzized text</i></p>
