Using Internal Images

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,6 +21,9 @@
     <nav> <!-- The nav element will include navigation buttons or links -->
         <p><a href="contact.html">Contact</a></p>
     </nav>
+    <nav> <!-- The nav element will include navigation buttons or links -->
+        <p><a href="kitty.html">Kitty Pics</a></p>
+    </nav>
     <hr />
     <h2><em>About Me</h2></em>
     <p>Hello, my name is <strong>Dillon Kiley</strong>. I was born in 1998 in <strong>Tobolsk, Russia</strong>. I was adopted at the age of 1 to an American family in <strong>Denver, Colorado.</strong></p>
