--- a/Portfolio/kitty.html
+++ b/Portfolio/kitty.html
@@ -6,13 +6,14 @@
 -->
 <html lang="en"> 
     <head> 
-        <title>Projects</title>	
+        <title>Kitty</title>	
     </head> 
     
     <body>
         <header>
             <h1>Main Title</h1>
         </header>
+        <img src="images/portrait.jpg" alt="Portrait of Marci Kitzmiller" />
         <img src="https://cdn.pixabay.com/photo/2017/06/21/00/22/dog-2425528_960_720.jpg" 
 alt="Photo of a puppy and a kitten." 
 style="border: thick red solid; width: 600; height:300" />
