--- a/Practice.html
+++ b/Practice.html
@@ -39,6 +39,10 @@
         -->
         <img src="https://cdn.pixabay.com/photo/2017/06/21/00/22/dog-2425528_960_720.jpg" alt="Photo of a puppy and a kitten." />
         <p><b>This is bold text</b></p>
+        <p><img src="images/portrait.jpg" alt="Portrait of Marci Kitzmiller" />
+        <img src="https://cdn.pixabay.com/photo/2017/06/21/00/22/dog-2425528_960_720.jpg" 
+        alt="Photo of a puppy and a kitten." 
+        style="border: thick red solid; width: 600; height:300" /></p>
         <p><strong>This is strong text</strong></p>
         <p><i>This is italzized text</i></p>
         <p>This is part of the paragraph</p>
