--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -26,21 +26,24 @@
             <section> <!-- The section element contains the three chunks we are using to sell ourselves in this page. -->
                 <article id="about"> <!-- This is the first chunk inside the section element. -->
                       <h2><em>About Me</em></h2>
+                      <img src="images/WebsitePorfolioPic.jpg" alt="Portrait of Dillon Kiley" />
                       <p>Hello, my name is <strong>Dillon Kiley</strong>. I was born in 1998 in <strong>Tobolsk, Russia</strong>. I was adopted at the age of 1 to an American family in <strong>Denver, Colorado.</strong></p>
                       <p>I've lived in Denver ever since I came here in 1999. Then two years later my parents adopted another kid from Russia and named him Dane. <span style="background-color: rebeccapurple; border: thin solid darkblue;">Then 2 years after Dane's</span> adoption, my parents adopted a little girl from China and named her Isabel.</p>
                 </article>
 
                 <article>
                     <article id="expirences"> <!-- This is the third chunk inside the section element. -->
-                        <h2><em>Past Expirences</em></h2> 
+                        <h2><em>Past Expirences</em></h2>
+                        <img src="images/SoccerBallPic.jpg" alt=""/>
                         <p>I've been playing soccer since the age of 5. I grew up playing recreational thought the city's youth league. In middle school I decided to play club soccer for the Rapids Acadmeny. I worked my way up to the highest level though the years and got offered a few schollarships to play in college.  </p>
-                        <p>Instead of playing in college, I decided to take an offer to play professional indoor soccer. </p>
+                        <p>Instead of playing in college, I was blessed with an offer to play professional indoor soccer. </p>
                 </article>
 
                 <article>
                     <article id="hobbies">
                         <h2><em>Hobbies</em></h2>
-                        <p>My favorite hobby is soccer obusiouly... and guitar! I started my freshman year of highschool and have been playing for 6 years now. </p>
+                        <img src="images/RasperriPiPic.jpg" alt=""/>
+                        <p>My favorite hobby is soccer... but I also really enjoy the guitar! I started my freshman year of highschool and have been playing for 6 years now. </p>
                         <p>Another hobbie I have is coding. I love playing with my Rasperry Pi and my Adruino which uses Python and Adruino's own programming language. </p>
                 </article>
             </section>   
