--- a/PracticeHTML/Images.html
+++ b/PracticeHTML/Images.html
@@ -1,6 +1,15 @@
-<img src="images/portrait.jpg" alt="Portrait of Marci Kitzmiller" />
-<img src="https://cdn.pixabay.com/photo/2017/06/21/00/22/dog-2425528_960_720.jpg" 
-alt="Photo of a puppy and a kitten." 
-style="border: thick red solid; width: 600; height:300" /></p>
+<!DOCTYPE html>
+<html>
+    <head>Images</head>
+    <body>
+        <!-- Images from URL -->
+        <figure><img src="https://cdn.pixabay.com/photo/2018/06/24/20/32/ivy-3495403_1280.jpg" alt="" style="border: thick red solid; width: 600; height:300" /></figure>
+        <hr />
+        <!-- Image from computer-->
+        <img src="images/portrait.jpg" alt="Portrait of Marci Kitzmiller" />
+        <hr />
+    </body>
+</html>
 
-<div id="ContentArea" style="color: red;
+
+
