--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -32,19 +32,44 @@
                 </article>
 
                 <article>
-                    <article id="expirences"> <!-- This is the third chunk inside the section element. -->
+                    <article id="Expirences"> 
                         <h2><em>Past Expirences</em></h2>
                         <img src="images/SoccerBallPic.jpg" alt=""/>
-                        <p>I've been playing soccer since the age of 5. I grew up playing recreational thought the city's youth league. In middle school I decided to play club soccer for the Rapids Acadmeny. I worked my way up to the highest level though the years and got offered a few schollarships to play in college.  </p>
-                        <p>Instead of playing in college, I was blessed with an offer to play professional indoor soccer. </p>
+                        <table>
+                            <caption> Employment History </caption>
+                            <tr> 
+                                <th>Years of Employment</th> 
+                                <th>Title</th> 
+                                <th>Company</th> 
+                            </tr> 
+                            <tr> 
+                                <td>2018-Present</td> 
+                                <td>Apprentice</td> 
+                                <td>The Software Guild</td> 
+                            </tr> 
+                            <tr> 
+                                <td>2012-2018</td> 
+                                <td>Clerk</td> 
+                                <td>United Shipping Services</td> 
+                            </tr>
+                            <tr>
+                                <td>2007-2012</td>
+                                <td>Student</td>
+                                <td>State University</td>
+                            </tr>
+                        </table>
                 </article>
 
                 <article>
                     <article id="hobbies">
                         <h2><em>Hobbies</em></h2>
                         <img src="images/RasperriPiPic.jpg" alt=""/>
-                        <p>My favorite hobby is soccer... but I also really enjoy the guitar! I started my freshman year of highschool and have been playing for 6 years now. </p>
-                        <p>Another hobbie I have is coding. I love playing with my Rasperry Pi and my Adruino which uses Python and Adruino's own programming language. </p>
+                        <ul>
+                            <li>Authors</li>
+
+
+
+                        </ul>
                 </article>
             </section>   
             
