--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -65,10 +65,36 @@
                         <h2><em>Hobbies</em></h2>
                         <img src="images/RasperriPiPic.jpg" alt=""/>
                         <ul>
-                            <li>Authors</li>
-
-
-
+                            <li>Watching Soccer</li>
+                            <ol>
+                                <li>Real Madrid</li>
+                                <li>Barcelona</li>
+                                <li>Liverpool</li>
+                            </ol>
+                        </ul>
+                        <ul>
+                            <li>Sports</li>
+                            <ol>
+                                <li>Soccer</li>
+                                <li>Tennis</li>
+                                <li>Spike Ball</li>
+                            </ol>
+                        </ul>
+                        <ul>
+                            <li>Sports</li>
+                            <ul>
+                                <li>Soccer</li>
+                                <li>Spike Ball</li>
+                                <li>Tennis</li>
+                            </ul>
+                        </ul>
+                        <ul>
+                            <li>Favorite Books</li>
+                            <ul>
+                                <li>Rich Dad Poor Dad</li>
+                                <li> ...</li>
+                                <li> ...</li>
+                            </ul>
                         </ul>
                 </article>
             </section>   
