--- a/PhoSizzlez.html/contactus.html
+++ b/PhoSizzlez.html/contactus.html
@@ -33,7 +33,7 @@
                 <label for="contact">Reason for Inquiry:</label>
                 <select id="contact" name="contact">
                 <option value="default" selected>--Select One--</option>
-                <option value="Catering">Catering</option>
+                <option value="Catering" selected>Catering</option>
                 <option value="PrivatePart">Private Party</option>
                 <option value="Feedback">Feedback</option>
                 <option value="Other">Other</option>
