--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -27,7 +27,7 @@
                 <article id="Description"></article>
                 <p><strong>Resturant Description
                 </strong><br />
-                This is the resturant description</p>
+                <p>Pho Sizzlez offeres the best and most flavorful pho in the<br /> downtown Metro Area. We're a family owned business<br /> thats been running since 1999. We're located at 8th St.<br /> and Keaton Ave. We're open Monday-Friday from 9 a.m. <br />to 9 p.m</p>
                 </article>
             </section>
             
@@ -35,6 +35,6 @@
     </body>
     <footer>
         <hr />
-        <p>Street, City, State, Zipcode<br /> Phone</p>
+        <p> 2720 Keaton Ave. Denver, Co 80602<br /> 720-1234-123</p>
     </footer>
 </html>
