--- a/PhoSizzlez.html/menu.html
+++ b/PhoSizzlez.html/menu.html
@@ -88,6 +88,6 @@
     </body>
     <footer>
         <hr />
-        <p>Street, City, State, Zipcode<br /> Phone</p>
+        <p> 2720 Keaton Ave. Denver, Co 80602<br /> 720-1234-123</p>
     </footer>
 </html>
