--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,20 +7,9 @@
 <html lang="en">
     <head>
         <title>Dillon's Profolio</title>
+        <link href="teststyles.css" rel="stylesheet" type="text/css" />
         <style>
-            body {
-                background-color: lightpink;
-            }
-            header, footer {
-                background-color: indianred;
-                color: white;
-            }
-            .border {
-                border: thick solid blue;
-            }
-            #expirences {
-                border: thick dashed orange;
-            }
+            
         </style>
     </head>
 
