--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -5,7 +5,10 @@
     Most recent revision:
 -->
 <html lang="en">
+    <head>
     <title>Contact Me</title>
+    </head>
+    <link href="styles/Form.css" rel="stylesheet" type="text/css" />
     <h1>Contact Me</h1>
     <hr />
     <a href="index.html">Home</a>
