--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,8 +7,40 @@
 <html lang="en">
     <head>
         <title>Dillon's Profolio</title>
-        <link href="teststyles.css" rel="stylesheet" type="text/css" />
+        <link href="styles/Main.css" rel="stylesheet" type="text/css" />
         <style>
+            caption {
+            font-weight: bold;
+            font-size: 1.2em;
+            margin-bottom: 8px;
+        }
+
+        table, th, td {
+            border: 1px solid #0d1f2d;
+            border-collapse: collapse;
+            padding: 5px 10px;
+        }
+
+        table {
+            width: 90%;
+            margin: auto;
+        }
+
+        tr {
+            height: 30px;
+        } 
+
+        th {
+            background-color: #546a7b;
+            color: #f2eded;
+        } 
+
+        tbody tr:nth-child(odd) {
+            background-color: #e4c3ad; 
+        }   
+    </style>
+
+</head>
             
         </style>
     </head>
@@ -20,11 +52,10 @@
             </header>
 
             <nav class="border">
-                <hr style="width: 80%; border: 3px  dotted blueviolet;" /> 
                 <p><a href="projects.html">Projects</a></p>
                 <p><a href="contact.html">Contact Me</a></p>
                 <p><a href="testimonials.html">Testimonials</a></p>
-                <hr style="width: 80%; border: 3px solid blueviolet;" />
+                
             </nav>
 
             <section> <!-- The section element contains the three chunks we are using to sell ourselves in this page. -->
@@ -41,26 +72,30 @@
                         <img src="images/SoccerBallPic.jpg" alt=""/>
                         <table>
                             <caption> Employment History </caption>
-                            <tr> 
-                                <th>Years of Employment</th> 
-                                <th>Title</th> 
-                                <th>Company</th> 
-                            </tr> 
-                            <tr> 
-                                <td>2018-Present</td> 
-                                <td>Apprentice</td> 
-                                <td>The Software Guild</td> 
-                            </tr> 
-                            <tr> 
-                                <td>2012-2018</td> 
-                                <td>Clerk</td> 
-                                <td>United Shipping Services</td> 
-                            </tr>
-                            <tr>
-                                <td>2007-2012</td>
-                                <td>Student</td>
-                                <td>State University</td>
-                            </tr>
+                            <thead>
+                                <tr> 
+                                    <th>Years of Employment</th> 
+                                    <th>Title</th> 
+                                    <th>Company</th> 
+                                </tr> 
+                            </thead> 
+                            <tbody>   
+                                <tr> 
+                                    <td>2018-Present</td> 
+                                    <td>Apprentice</td> 
+                                    <td>The Software Guild</td> 
+                                </tr> 
+                                <tr> 
+                                    <td>2012-2018</td> 
+                                    <td>Clerk</td> 
+                                    <td>United Shipping Services</td> 
+                                </tr>
+                                <tr>
+                                    <td>2007-2012</td>
+                                    <td>Student</td>
+                                    <td>State University</td>
+                                </tr>
+                            </tbody>
                         </table>
                 </article>
 
