--- a/Portfolio/testimonials.html
+++ b/Portfolio/testimonials.html
@@ -8,12 +8,13 @@
     <head> 
         <title>Testimonials</title>	
     </head> 
+    <link href="styles/Main.css" rel="stylesheet" type="text/css" />
     
     <body>
         <header>
             <h1>Main Title</h1>
         </header>
-
+        <h1>asdf</h1>
         <nav>
 
         </nav>
