--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -13,8 +13,10 @@
     <hr />
     <a href="index.html">Home</a>
     <hr />
+    <body>
     <h2>Information Request</h2>
-    <form action="submit.html"method="POST">
+    <form                
+        action="submit.html"method="POST">
         <label for="firstName">First Name:</label> <br />
         <input type="text" id="firstName" name="firstName"> <br />
         <label for="lastName">Last Name:</label><br />
@@ -48,4 +50,5 @@
         <textarea id="info" name="info"></textarea><br />
         <input type="submit" name="submit" value="Submit">
     </form>
+     </body>
 </html>
