--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -9,6 +9,13 @@
     <hr />
     <head>
         <title>Pho Sizzlez</title>
+        <link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+        <style>
+            img {
+                border: cadetblue;
+                border-bottom: 1px dashed red; 
+            }
+        </style>
     </head>
     <body>
         <main>
