--- a/PhoSizzlez.html/contactus.html
+++ b/PhoSizzlez.html/contactus.html
@@ -9,6 +9,13 @@
     <hr />
     <head>
         <title>Pho Sizzlez</title>
+        <link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+        <style>
+        title {
+            text-size-adjust: ;
+        }
+        
+        </style>
     </head>
     <body>
         <main>
