--- a/PhoSizzlez.html/menu.html
+++ b/PhoSizzlez.html/menu.html
@@ -9,6 +9,13 @@
     <hr />
     <head>
         <title>Pho Sizzlez</title>
+        <link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+        <style>
+            table {
+                width: 100%
+            }
+        
+        </style>
     </head>
     <body>
 
@@ -24,7 +31,7 @@
                 <hr />
             </nav>
             <section>
-                <table width=100%>
+                <table>
                     <tr>
                         <td><b>Rare Steak Pho</b><br />
                             Our rare steak pho comes in a <br />
