--- a/PhoSizzlez.html/contactus.html
+++ b/PhoSizzlez.html/contactus.html
@@ -12,7 +12,7 @@
         <link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
         <style>
         title {
-            
+            color: cadetblue;
         }
         
         </style>
