--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -13,24 +13,33 @@
         <style>
             img {
                 border: cadetblue;
-                border-bottom: 1px dashed red; 
+                border: 5px dashed brown;
+                width: 400px;
+                height: 150px;
             }
+            section {
+                text-align: center;
+                background-color: chartreuse;
+            }
+
+            
         </style>
     </head>
     <body>
         <main>
             <header>
-                <h1>Pho Sizzlez</h1>
+                <h1 id="name">Pho Sizzlez</h1>
             </header>
             <nav>
                 <hr />
                 <a href="Rindex.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <a href="contactus.html">Contact Us</a>
+                <a href="asdf.html">Unvisited Link</a>
                 <hr />
             </nav>
             <section>
-                <img src="https://shepherdexpress.com/downloads/45598/download/DiningOut_PhoLAmour_A.jpg?cb=0b4587f5d921142d445273ee172baae3&w=1200" width="400" height="150" />
+                <img src="https://shepherdexpress.com/downloads/45598/download/DiningOut_PhoLAmour_A.jpg?cb=0b4587f5d921142d445273ee172baae3&w=1200" />
                 <article id="Description"></article>
                 <p><strong>Resturant Description
                 </strong><br />
