--- a/PhoSizzlez.html/contactus.html
+++ b/PhoSizzlez.html/contactus.html
@@ -14,6 +14,11 @@
         title {
             color: cadetblue;
         }
+
+        form {
+            font-weight: bold;
+            
+        }
         
         </style>
     </head>
