--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -32,10 +32,10 @@
             </header>
             <nav>
                 <hr />
-                <a href="Rindex.html">Home</a>
-                <a href="menu.html">Menu</a>
-                <a href="contactus.html">Contact Us</a>
-                <a href="asdf.html">Unvisited Link</a>
+                <a href="Rindex.html" style="text-decoration: none;">Home</a>
+                <a href="menu.html" style="text-decoration: none;">Menu</a>
+                <a href="contactus.html" style="text-decoration: none;">Contact Us</a>
+                <a href="asdf.html" style="text-decoration: none;">Unvisited Link</a>
                 <hr />
             </nav>
             <section>
@@ -50,6 +50,6 @@
     </body>
     <footer>
         <hr />
-        <p> 2720 Keaton Ave. Denver, Co 80602<br /> 720-1234-123</p>
+        <p> 2720 Keaton Ave. Denver, Co 80602<br /> 720-123-4123</p>
     </footer>
 </html>
