--- a/PhoSizzlez.html/note.html
+++ b/PhoSizzlez.html/note.html
@@ -19,7 +19,7 @@
     9. Style the site navigation so that:
         DONE Visited links appear in a different    color than their default state.
         DONE When you hover over a link, the text is bold. This should only be when hovering. Otherwise, the text should be the normal thickness.
-        Active links should not be underlined.
+        DONE Active links should not be underlined.
     
     10. Add a section to the menu for beverages, with a table like the one below.
     
