--- a/PracticeJava/LoggingLetters/loggingLetters.html
+++ b/PracticeJava/LoggingLetters/loggingLetters.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="loggingLetters.js">
-        var sentence = "I love learning software development";
- 
-        for (var i=0; i < sentence.length; i++) {
-        if(sentence[i] !== " "){
-        console.log(sentence[i]);
-        }
- }
- console.log("hello")
-    
-    </script>
+    <h1>Logging Letters</h1>
+    <script type="text/javascript" src="loggingLetters.js"></script>
 </head>
 <body>
 </body>
