--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -8,7 +8,14 @@
     <p>Home Page</p>
     <hr />
     <head>
+
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <title>Pho Sizzlez</title>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
         <link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
         <style>
             img {
@@ -27,8 +34,10 @@
     </head>
     <body>
         <main>
-            <header>
-                <h1 id="name">Pho Sizzlez</h1>
+            <header class="jumbotron">
+                <h1 class="text-left mt-5" id="name">Pho Sizzlez</h1>
+                <h3 class="front-italic"> Opening A New Location!</h2>
+                <h4 class="text-right mt-5">Visit Today!</h4>
             </header>
             <nav>
                 <hr />
