--- a/PracticeBootStrap/bootstrap-examples#1.html
+++ b/PracticeBootStrap/bootstrap-examples#1.html
@@ -12,9 +12,9 @@
 	</head>
 	<body>
         <header class="jumbotron">
-            <h1>Marci Kitzmiller</h1>
-            <h2 class="font-italic">Web Developer Extraordinaire</h2>
-            <h3 class="text-right mt-5">Solving Web Dev problems every day!</h3>
+            <h1>Portfolio for Dillon Kiley</h1>
+            <h2 class="font-italic">Web Developer</h2>
+            <h3 class="text-right mt-5">Solving Web Dev Problems Every Day</h2>
         </header>
         
         <style>
