--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -39,7 +39,7 @@
                 <h3 class="front-italic"> Opening A New Location!</h2>
                 <h4 class="text-right mt-5">Visit Today!</h4>
             </header>
-            <nav class="border">
+            <nav class="">
                 <hr />
                 <a href="Rindex.html" style="text-decoration: none;">Home</a>
                 <a href="menu.html" style="text-decoration: none">Menu</a>
