--- a/PhoSizzlez.html/menu.html
+++ b/PhoSizzlez.html/menu.html
@@ -22,7 +22,8 @@
             section {
                 background-color: rgb(102, 16, 16);
             }
-        
+
+            
         </style>
     </head>
     <body>
@@ -38,7 +39,7 @@
                 <a href="contactus.html">Contact us</a>
                 <hr />
             </nav>
-            <section>
+            <section id="bothmenus">
                 <table>
                     <tr>
                         <td><b id="menuname">Rare Steak Pho</b><br />
