--- a/PhoSizzlez.html/Rindex.html
+++ b/PhoSizzlez.html/Rindex.html
@@ -39,8 +39,15 @@
                 <h3 class="front-italic"> Opening A New Location!</h2>
                 <h4 class="text-right mt-5">Visit Today!</h4>
             </header>
+            
+                
+                <ul class="nav navpills">
+                    <li><a href="Rindex.html" style="text-decoration: none;">Home</a></li>
+                    <li><a href="menu.html" style="text-decoration: none">Menu</a></li>
+                    <li><a href="contactus.html" style="text-decoration: none;">Contact Us</a>
+                    </li>
+                </ul>
             <nav class="">
-                <hr />
                 <a href="Rindex.html" style="text-decoration: none;">Home</a>
                 <a href="menu.html" style="text-decoration: none">Menu</a>
                 <a href="contactus.html" style="text-decoration: none;">Contact Us</a>
