--- a/Pho/menu.html
+++ b/Pho/menu.html
@@ -88,7 +88,7 @@
                 <span class="navbar-text"></span>
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link" href="main.html">Home</a>
+                        <a class="navbar-brand" href="main.html"><img src="https://cdn2.iconfinder.com/data/icons/web-iconset-pt-1/100/047_-_homepage-512.png" height="40px"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="menu.html">Menu</a>
