--- a/Pho/menu.html
+++ b/Pho/menu.html
@@ -6,7 +6,7 @@
 -->
 <html>
     <head>
-        <title>Pho Sizzlez</title>
+        <title>Menu</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
@@ -93,7 +93,7 @@
                 <span class="navbar-text"></span>
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a class="navbar-brand" href="main.html"><img src="https://cdn2.iconfinder.com/data/icons/web-iconset-pt-1/100/047_-_homepage-512.png" height="40px"></a>
+                        <a class="navbar-brand" href="index.html"><img src="https://cdn2.iconfinder.com/data/icons/web-iconset-pt-1/100/047_-_homepage-512.png" height="40px"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="menu.html">Menu</a>
