--- a/PracticePho/index.html
+++ b/PracticePho/index.html
@@ -48,6 +48,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact Us</a>
                     </li>
+                    
                 </ul>
             </nav>
 
@@ -89,7 +90,7 @@
             
         </main>
         <hr />
-        <footer>
+        <footer id="footer">
             <p> 2720 Keaton Ave. Denver, Co 80602<br /> 720-123-4123</p>
         </footer>
     </body>
