--- a/PhoSizzlez.html/contactus.html
+++ b/PhoSizzlez.html/contactus.html
@@ -130,7 +130,7 @@
             
         </main>
         <hr />
-        <footer>
+        <footer id="footer">
             <p> 2720 Keaton Ave. Denver, Co 80602<br /> 720-123-4123</p>
         </footer>
     </body>
