--- a/PhoSizzlez.html/contactus.html
+++ b/PhoSizzlez.html/contactus.html
@@ -1,6 +1,6 @@
 <!Doctype html>
 <!-- 
-    Name: Dillon Kiley
+    Name: Dillon S Kiley
     Date Created: 1/27/20
     Most recent revision: 2/21/20
 -->
@@ -135,5 +135,6 @@
         </footer>
     </body>
     
+
 </html>
 
