--- a/PhoSizzlez.html/index.html
+++ b/PhoSizzlez.html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-    Name: Dillon Kiley
+    Name: Dillon S Kiley
     Date Created: 1/27/20
     Most recent revision: 2/21/20
 -->
@@ -95,5 +95,6 @@
         </footer>
     </body>
     
+
 </html>
         
