--- a/PhoSizzlez.html/menu.html
+++ b/PhoSizzlez.html/menu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-    Name: Dillon Kiley
+    Name: Dillon S Kiley
     Date Created: 1/27/20
     Most recent revision: 2/21/20
 -->
@@ -145,4 +145,5 @@
         </main>
     </body>
     
+
 </html>
